# icb-backend-v3

./: .coveragerc  .gitignore  Dockerfile  README.md  availability_analysis_report.md  docker-compose.yml  env.example  live_availability_test_report.md  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-cloud-monitoring.md  tatus  test_sample_data.py
.github/workflows/: ci-pipeline.yml  scheduler.yml  test-scheduler.yml
data/exports/: blue-tokai-coffee-shopify.json  rossette-coffee-shopify.json
data/validation/: README.md  SAMPLE_INSIGHTS.md  collect-samples.py  sample-analysis.py  sample-validation.py
docs/: architecture.md  canonical_artifact.md  estates_rows.json  prd.md  regions_rows.json  supabase (1).ts  supabase (2).ts  supabase (4).ts  supabase.ts
docs/architecture/: 1-core-data-flow.md  10-monitoring-observability.md  11-launch-checklist.md  12-future-considerations.md  13-service-architecture-patterns.md  index.md  (+11 more)
migrations/: 001_add_user_roles.sql  add_content_hash_to_coffee_images.sql  add_imagekit_url_to_coffee_images.sql  create_enrichment_table.sql  create_llm_cache_cleanup.sql  create_llm_cache_table.sql  create_platform_monitoring_views.sql  create_rpc_check_content_hash.sql  extend_rpc_upsert_coffee_epic_c_parameters_fixed.sql  extend_rpc_upsert_coffee_image.sql  extend_rpc_upsert_coffee_image_imagekit.sql
scripts/: deploy_monitoring.py  import_grafana_dashboards.py  run_tests.py  start_monitoring.py
src/: __init__.py
tests/: test_queue_integration.py  test_roaster_config.py  test_scheduler.py
(+598 files in other folders)
